After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698205 - query-editor: Don't grab focus if we already have it
query-editor: Don't grab focus if we already have it
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-17 14:41 UTC by Rui Matos
Modified: 2013-04-17 14:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
query-editor: Don't grab focus if we already have it (1.15 KB, patch)
2013-04-17 14:41 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-04-17 14:41:41 UTC
IMs are very finicky...
Comment 1 Rui Matos 2013-04-17 14:41:43 UTC
Created attachment 241750 [details] [review]
query-editor: Don't grab focus if we already have it

Grabbing the focus to a GtkEntry causes its selection to be set which
in turn causes it to reset the IM context. Avoid doing that when we
already have the search entry focused to not mess the IM context.
Comment 2 Cosimo Cecchi 2013-04-17 14:47:49 UTC
Review of attachment 241750 [details] [review]:

Looks good, please push to gnome-3-8 and master.
Comment 3 Rui Matos 2013-04-17 14:54:28 UTC
Thanks for the review!

Attachment 241750 [details] pushed as c291a26 - query-editor: Don't grab focus if we already have it