query-editor: Don't grab focus if we already have it

Grabbing the focus to a GtkEntry causes its selection to be set which
in turn causes it to reset the IM context. Avoid doing that when we
already have the search entry focused to not mess the IM context.

https://bugzilla.gnome.org/show_bug.cgi?id=698205